actuator-homework/clustering/backend_yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-backend
  namespace: sandbox
spec:
  selector:
    matchLabels:
      run: library-backend
  replicas: 1
  template:
    metadata:
      labels:
        run: library-backend
    spec:
      containers:
        - name: library-backend
          image: vaomaohao/library-backend:new
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"
